[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vcr-py-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "openai>=1.0.0",
    "pip>=26.0.1",
    "pyyaml>=6.0.3",
    "vcrpy>=8.1.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["lhi"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN"]
ignore = ["ANN401"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["lhi"]

[[tool.mypy.overrides]]
module = "vcr"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
